@@ -2,6 +2,7 @@
 
 	* Fixed bug #14799: htmlArea RTE: Color dialogue may raise a js error in IE
 	* Updated htmlArea RTE version to 2.0.2
+	* Fixed bug #14793: htmlArea RTE: Problematic icons in IE6
 
 2010-06-20  Stanislas Rolland  <typo3@sjbr.ca>
 
