@@ -13,6 +13,7 @@
 
 	* Fixed bug #14799: htmlArea RTE: Color dialogue may raise a js error in IE
 	* Updated htmlArea RTE version to 2.0.2
+	* Fixed bug #14793: htmlArea RTE: Problematic icons in IE6
 
 2010-06-21  Ernesto Baschny  <ernst@cron-it.de>
 
